--- a/CSS/segment-switch.css
+++ b/CSS/segment-switch.css
@@ -47,3 +47,25 @@
     transition: background-color 0.5s, opacity 0.5s, color 0.5s;
     opacity: 1;
 }
+
+@media screen and (max-width: 1000px) {
+    form#segment-switch {
+        position: static;
+        transform: none;
+        width: 90%;
+        gap: 0.5rem;
+        margin: 0.5rem auto 0 auto;
+    }
+
+    form#segment-switch div.switch-option {
+        flex-basis: auto;
+        width: 30%;
+        border-radius: 6px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    form#segment-switch {
+        flex-wrap: wrap;
+    }
+}
